--- a/OurGames.UI/Views/_ViewImports.cshtml
+++ b/OurGames.UI/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using OurGames.UI.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
