Pre-configurado, autenticação com Google, com Facebook e email/senha

--- a/OurGames.UI/Views/User/Index.cshtml
+++ b/OurGames.UI/Views/User/Index.cshtml
@@ -22,7 +22,7 @@
                 <td>@item.LastName</td>
                 <td>@item.BirthDate.ToShortDateString()</td>
                 <td>@item.Email</td>
-                <td>@item.AccessLevel.Descricao</td>
+                <td>@item.AccessLevel.Description</td>
             </tr>
         }
     </table>
