--- a/OurGames.UI/Views/Shared/_Layout.cshtml
+++ b/OurGames.UI/Views/Shared/_Layout.cshtml
@@ -27,6 +27,11 @@
     <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+
+    <nav class="nav ">
+
+    </nav>
+
     @RenderBody()
 </body>
 </html>
